@@ -3,6 +3,7 @@ version 0.77.07
 	Human readable custom ev steps
 	GUI: Status info
 	Human readable white balance adjustments
+	--white_balance_adjustment
 
 version 0.77.06 ( 2012-01-08 )
 	glade code cleanup
